--- a/Python/Python Study Notes/17. Generator.md
+++ b/Python/Python Study Notes/17. Generator.md
@@ -362,10 +362,387 @@ combine operations, the generators do so without making multiple temporary lists
 [0.0, 1.0, 2.0, 3.0]								# Nested combinations
 ```
 
+flat is generally better than nested:
+
+```
+>>> list(abs(x) * 2 for x in (−1, −2, 3, 4)) 		# Unnested equivalents
+[2, 4, 6, 8]
+>>> list(math.sqrt(x ** 2) for x in range(4)) 		# Flat is often better
+[0.0, 1.0, 2.0, 3.0]
+>>> list(abs(x) for x in (−1, 0, 1)) 
+[1, 0, 1]
+```
+
+### Generator expressions versus filter
+
+Because `filter` is an iterable in 3.X that generates its results on request, a generator expression with an `if` clause is operationally equivalent (in 2.X, `filter` produces a temporary list that the generator does not, but the code comparisons again apply).
+
+```
+>>> line = 'aa bbb c'
+>>> ''.join(x for x in line.split() if len(x) > 1) 			# Generator with 'if'
+'aabbb'
+>>> ''.join(filter(lambda x: len(x) > 1, line.split())) 	# Similar to filter
+'aabbb'
+```
+
+As for list comprehen-sions, though, adding processing steps to filter results requires a `map` too, which makes filter noticeably more complex than a generator expression:
+
+```
+>>> ''.join(x.upper() for x in line.split() if len(x) > 1) 
+'AABBB'
+>>> ''.join(map(str.upper, filter(lambda x: len(x) > 1, line.split()))) 
+'AABBB'
+```
+
+a statement-based equivalent to a generator expression, though it sometimes renders substantially more code:
+
+```
+>>> ''.join(x.upper() for x in line.split() if len(x) > 1) 
+'AABBB'
+
+>>> res = ''
+>>> for x in line.split():		# Statement equivalent? 
+		if len(x) > 1:			# This is also a join
+			res += x.upper()
+
+>>> res 
+'AABBB'
+```
 
 
-#### ...
 
-#### ...
+## Generator Functions Versus Generator Expressions
 
-#### ...
+- **Generator functions**
+
+  >  A function `def` statement that contains a `yield` statement is turned into a generator function. When called, it returns a new generator object with automatic retention of local scope and code position; an automatically created `__iter__` method that simply returns itself; and an automatically created `__next__` method (`next` in 2.X) that starts the function or resumes it where it last left off, and raises `StopIteration` when finished producing results.
+
+
+- **Generator expressions** 
+
+  > A comprehension expression enclosed in parentheses is known as a generator expression. When run, it returns a new generator object with the same automatically created method interface and state retention as a generator function call’s results —with an `__iter__` method that simply returns itself; and a `__next__` method (`next` in 2.X) that starts the implied loop or resumes it where it last left off, and raises `StopIteration` when finished producing results.
+
+**Example 1 **, repeats each character in a string four times:
+
+```
+>>> G = (c * 4 for c in 'SPAM')			# Generator expression
+>>> list(G) 							# Force generator to produce all results
+['SSSS', 'PPPP', 'AAAA', 'MMMM']	
+```
+
+The equivalent generator function
+
+```
+>>> def timesfour(S):					# Generator function
+...     for c in S:
+...         yield c * 4
+... 
+>>> G = timesfour('spam')
+>>> list(G)								# Iterate automatically
+['ssss', 'pppp', 'aaaa', 'mmmm']
+```
+
+Both expressions and functions support both automatic and manual iteration—the prior `list` call iterates automatically, and the following iterate manually:
+
+```
+>>> G = (c * 4 for c in 'SPAM')
+>>> I = iter(G)						# Iterate manually (expression)
+>>> next(I) 
+'SSSS'
+>>> next(I) 
+'PPPP'
+
+>>> G = timesfour('spam')
+>>> I = iter(G)						# Iterate manually (function)
+>>> next(I) 
+'ssss'
+>>> next(I) 
+'pppp'
+```
+
+**Example 2 :**
+
+```
+>>> line = 'aa bbb c'
+
+>>> ''.join(x.upper() for x in line.split() if len(x) > 1) '		# Expression
+AABBB'
+
+>>> def gensub(line):				# Function
+		for x in line.split(): 
+			if len(x) > 1: 
+				yield x.upper()
+
+>>> ''.join(gensub(line)) 			# But why generate?
+'AABBB'
+```
+
+
+
+## Generators Are Single-Iteration Objects
+
+both generator functions and generator expressions are their own iterators and thus support just one active iteration. you can’t have multiple iterators of either positioned at different locations in the set of results.
+
+a generator’s iterator is the generator itself.
+
+```
+>>> G = (c * 4 for c in 'SPAM')
+>>> iter(G) is G 					# My iterator is myself: G has __next__
+True
+```
+
+If you iterate over the results stream manually with multiple iterators, they will all point to the same position:
+
+```
+>>> G = (c * 4 for c in 'SPAM')		# Make a new generator
+>>> I1 = iter(G)					# Iterate manually
+>>> next(I1) 
+'SSSS'
+>>> next(I1) 
+'PPPP'
+>>> I2 = iter(G)					# Second iterator at same position!
+>>> next(I2) 
+'AAAA'
+```
+
+once any iteration runs to completion, all are exhausted—we have to make a new generator to start again:
+
+```
+>>> list(I1) 						# Collect the rest of I1's items
+['MMMM']
+>>> next(I2) 						# Other iterators exhausted too
+StopIteration
+
+>>> I3 = iter(G)					# Ditto for new iterators
+>>> next(I3) 
+StopIteration
+
+>>> I3 = iter(c * 4 for c in 'SPAM')	# New generator to start over
+>>> next(I3) 
+'SSSS'
+```
+
+The same holds true for generator functions—the following `def` statement-based equivalent supports just one active iterator and is exhausted after one pass:
+
+```
+>>> def timesfour(S):
+		for c in S: 
+			yield c * 4
+>>> G = timesfour('spam')			# Generator functions work the same way
+>>> iter(G) is G 
+True
+>>> I1, I2 = iter(G), iter(G)
+>>> next(I1) 
+'ssss'
+>>> next(I1) 
+'pppp'
+>>> next(I2) 						# I2 at same position as I1
+'aaaa'
+```
+
+This is different from the behavior of some built-in types, which support multiple iter-ators and passes and reflect their in-place changes in active iterators:
+
+```
+>>> L = [1, 2, 3, 4]
+>>> I1, I2 = iter(L), iter(L)
+>>> next(I1) 
+1
+>>> next(I1) 
+2
+>>> next(I2) 					# Lists support multiple iterators
+1
+>>> del L[2:]					# Changes reflected in iterators
+>>> next(I1) 
+StopIteration
+```
+
+**if you wish to scan a generator’s values multiple times, you must either create a new generator for each scan or build a rescannable list out of its values—a single generator’s values will be consumed and exhausted after a single pass.**
+
+
+
+## The Python 3.3 yield from Extension
+
+Python 3.3 introduces extended syntax for the yield statement that allows delegation to a subgenerator with a from generator clause. In simple cases, it’s the equivalent to a yielding for loop—the list here in the following forces the generator to produce all its values, and the comprehension in parentheses is a generator expression,
+
+```
+>>> def both(N):
+		for i in range(N): yield i 
+		for i in (x ** 2 for x in range(N)): yield i
+
+>>> list(both(5)) 
+[0, 1, 2, 3, 4, 0, 1, 4, 9, 16]
+```
+
+The new 3.3 syntax makes this arguably more concise and explicit, and supports all the usual generator usage contexts:
+
+```
+>>> def both(N):
+		yield from range(N) 
+		yield from (x ** 2 for x in range(N))
+
+>>> list(both(5)) 
+[0, 1, 2, 3, 4, 0, 1, 4, 9, 16]
+
+>>> ' : '.join(str(i) for i in both(5)) 
+'0 : 1 : 2 : 3 : 4 : 0 : 1 : 4 : 9 : 16'
+```
+
+this is only available in 3.3 and later
+
+
+
+## Generation in Built-in Types, Tools, and Classes
+
+**Example 1**, dictionaries are iterables with iterators that produce keys on each iteration:
+
+```
+>>> D = {'a':1, 'b':2, 'c':3}
+>>> x = iter(D)
+>>> next(x) 
+'c'
+>>> next(x) 
+'b'
+```
+
+### Generators and library tools: Directory walkers
+
+the standard directory walker—which at each level of a tree yields a tuple of the current directory, its subdirectories, and its files:
+
+```
+>>> import os
+>>> for (root, subs, files) in os.walk('.'):		# Directory walk generator
+		for name in files:							# A Python 'find' operation
+			if name.startswith('call'): 
+				print(root, name)
+
+. callables.py 
+.\dualpkg callables.py
+```
+
+By yielding results as it goes, the walker does not require its clients to wait for an entire tree to be scanned.
+
+```
+>>> G = os.walk(r'C:\code\pkg')
+>>> iter(G) is G 					# Single-scan iterator: iter(G) optional
+True
+>>> I = iter(G)
+>>> next(I) 
+('C:\\code\\pkg', ['__pycache__'], ['eggs.py', 'eggs.pyc', 'main.py', ...etc...])
+>>> next(I) 
+('C:\\code\\pkg\\__pycache__', [], ['eggs.cpython-33.pyc', ...etc...])
+>>> next(I) 
+StopIteration
+```
+
+### Generators and function application
+
+starred arguments can unpack an iterable into individual arguments.
+
+```
+>>> def f(a, b, c): print('%s, %s, and %s' % (a, b, c))
+>>> f(0, 1, 2)											# Normal positionals
+0, 1, and 2
+>>> f(*range(3)) 						# Unpack range values: iterable in 3.X
+0, 1, and 2
+>>> f(*(i for i in range(3))) 			# Unpack generator expression values
+0, 1, and 2
+```
+
+This applies to dictionaries and views too (though `dict.values` is also a list in 2.X, and order is arbitrary when passing values by position):
+
+```
+>>> D = dict(a='Bob', b='dev', c=40.5); D 
+{'b': 'dev', 'c': 40.5, 'a': 'Bob'}
+>>> f(a='Bob', b='dev', c=40.5) 			# Normal keywords 
+Bob, dev, and 40.5
+>>> f(**D) 									# Unpack dict: key=value 
+Bob, dev, and 40.5
+>>> f(*D) 									# Unpack keys iterator 
+b, c, and a
+>>> f(*D.values()) 							# Unpack view iterator: iterable in 3.X 
+dev, 40.5, and Bob
+```
+
+the following three forms equivalent
+
+```
+>>> for x in 'spam': print(x.upper(), end=' ') 
+S P A M
+
+>>> list(print(x.upper(), end=' ') for x in 'spam') 
+S P A M [None, None, None, None]
+
+>>> print(*(x.upper() for x in 'spam')) 
+S P A M
+```
+
+
+
+## Example: Generating Scrambled Sequences
+
+### Scrambling sequences
+
+```
+>>> L, S = [1, 2, 3], 'spam'
+>>> for i in range(len(S)):			# For repeat counts 0..3 
+		S = S[1:] + S[:1] 			# Move front item to the end
+		print(S, end=' ')
+
+pams amsp mspa spam
+
+>>> for i in range(len(L)):
+		L = L[1:] + L[:1] 			# Slice so any sequence type works
+		print(L, end=' ')
+
+[2, 3, 1] [3, 1, 2] [1, 2, 3]
+----------
+```
+
+### Simple functions
+
+```
+>>> def scramble(seq):
+		res = [] 
+		for i in range(len(seq)): 
+			res.append(seq[i:] + seq[:i]) 
+		return res
+
+>>> scramble('spam') 
+['spam', 'pams', 'amsp', 'mspa']
+
+>>> def scramble(seq):
+		return [seq[i:] + seq[:i] for i in range(len(seq))]
+
+>>> scramble('spam') 
+['spam', 'pams', 'amsp', 'mspa']
+
+>>> for x in scramble((1, 2, 3)): 
+		print(x, end=' ')
+
+(1, 2, 3) (2, 3, 1) (3, 1, 2)
+```
+
+### Generator functions
+
+```
+>>> def scramble(seq):
+		for i in range(len(seq)):
+			seq = seq[1:] + seq[:1] 		# Generator function
+			yield seq						# Assignments work here
+			
+>>> def scramble(seq):
+		for i in range(len(seq)): 			# Generator function
+			yield seq[i:] + seq[:i]			# Yield one item per iteration
+
+>>> list(scramble('spam')) 					# list()generates all results
+['spam', 'pams', 'amsp', 'mspa']
+>>> list(scramble((1, 2, 3))) 				# Any sequence type works
+[(1, 2, 3), (2, 3, 1), (3, 1, 2)]
+>>>
+>>> for x in scramble((1, 2, 3)): 			# for loops generate results
+		print(x, end=' ')
+
+(1, 2, 3) (2, 3, 1) (3, 1, 2)
+```
+
+### Generator expressions
