--- a/Python/Python Study Notes/17. Generator.md
+++ b/Python/Python Study Notes/17. Generator.md
@@ -746,3 +746,107 @@ pams amsp mspa spam
 ```
 
 ### Generator expressions
+
+generator expressions, generate values on request and retain their local state, they yield their values automatically.
+
+```
+>>> S 
+'spam'
+>>> G = (S[i:] + S[:i] for i in range(len(S)))		# Generator expression equivalent
+>>> list(G) 
+['spam', 'pams', 'amsp', 'mspa']
+```
+
+generator expressions cannot contain statements.
+
+To generalize a generator expression for an arbitrary subject, wrap it in a simple function that takes an argument and returns a generator that uses it:
+
+```
+>>> F = lambda seq: (seq[i:] + seq[:i] for i in range(len(seq)))
+>>> F(S) 
+<generator object <genexpr> at 0x00000000029883F0>
+>>>
+>>> list(F(S)) 
+['spam', 'pams', 'amsp', 'mspa']
+>>> list(F([1, 2, 3])) 
+[[1, 2, 3], [2, 3, 1], [3, 1, 2]]
+>>> for x in F((1, 2, 3)):
+		print(x, end=' ')
+(1, 2, 3) (2, 3, 1) (3, 1, 2)
+```
+
+### Tester client
+
+```
+# file scramble.py
+
+def scramble(seq):
+	for i in range(len(seq)):		# Generator function 
+		yield seq[i:] + seq[:i]		# Yield one item per iteration
+
+scramble2 = lambda seq: (seq[i:] + seq[:i] for i in range(len(seq)))
+```
+
+
+
+```
+>>> from scramble import scramble
+>>> from inter2 import intersect, union
+>>>
+>>> def tester(func, items, trace=True):
+		for args in scramble(items):		# Use generator (or: scramble2(items))
+			if trace: print(args) 
+			print(sorted(func(*args)))
+
+>>> tester(intersect, ('aab', 'abcde', 'ababab')) 
+('aab', 'abcde', 'ababab') 
+['a', 'b'] 
+('abcde', 'ababab', 'aab') 
+['a', 'b'] 
+('ababab', 'aab', 'abcde') 
+['a', 'b']
+
+>>> tester(intersect, ([1, 2], [2, 3, 4], [1, 6, 2, 7, 3]), False)
+[2]
+[2]
+[2]
+```
+
+### Permutations: All possible combinations
+
+```
+# File permute.py
+
+def permute1(seq):
+	if not seq:				# Shuffle any sequence: list
+		return [seq] 		# Empty sequence
+	else:		
+		res = [] 
+		for i in range(len(seq)):
+			rest = seq[:i] + seq[i+1:] 			# Delete current node 
+			for x in permute1(rest): 			# Permute the others 
+				res.append(seq[i:i+1] + x) 		# Add node at front
+			return res
+
+def permute2(seq):
+	if not seq:				# Shuffle any sequence: generator 
+		yield seq 			# Empty sequence
+	else:		
+		for i in range(len(seq)):
+			rest = seq[:i] + seq[i+1:] 		# Delete current node
+			for x in permute2(rest): 		# Permute the others
+				yield seq[i:i+1] + x		# Add node at front
+```
+
+
+
+#### ...
+
+#### ...
+
+#### ...
+
+
+
+
+
