--- a/Python/Python Study Notes/19. Modules.md
+++ b/Python/Python Study Notes/19. Modules.md
@@ -666,31 +666,254 @@ reloaded: After editing
 
 # 3. Module Packages
 
+an import can name a directory path. A directory of Python code is said to be a package, so such imports are known as package imports. In effect, a package import turns a directory on your computer into another Python name-space, with attributes corresponding to the subdirectories and module files that the directory contains.
+
+### Package Import Basics
+
+package imports, list a path of names separated by periods:
+
+```
+import dir1.dir2.mod
+```
+
+The same goes for `from` statements:
+
+```
+from dir1.dir2.mod import x
+```
+
+#### Packages and Search Path Settings
+
+You cannot use an invalid statement like this:
+
+```
+import C:\mycode\dir1\dir2\mod		# Error: illegal syntax
+```
+
+But you can add `C:\mycode` to your **PYTHONPATH** variable or a `.pth` file, and say this in your script:
+
+```
+import dir1.dir2.mod
+```
+
+#### Package `__init__.py` Files
+
+If you choose to use package imports, there is one more constraint you must follow: at least until Python 3.3, each directory named within the path of a package import statement must contain a file named `__init__.py`, or your package imports will fail.
+
+in the **Example**, both `dir1` and `dir2` must contain a file called `__init__.py`; the container directory `dir0` does not require such a file because it’s not listed in the `import` statement itself.
+
+for a directory structure such as this:
+
+```
+dir0\dir1\dir2\mod.py
+```
+
+and an import statement of the form:
+
+```
+import dir1.dir2.mod
+```
+
+the following rules apply:
+
+- `dir1` and `dir2` both must contain an `__init__.py` file.
+
+
+- `dir0`, the container, does not require an `__init__.py` file; this file will simply be ignored if present.
+
+
+- `dir0`, not `dir0\dir1`, must be listed on the module search path `sys.path`.
+
+`dir0` must be an automatic path component (the home, libraries, or site-packages directories), or be given in **PYTHONPATH** or `.pth` file settings or manual `sys.path` changes.
+
+this **Example**’s directory structure should be as follows, with indentation designating directory nesting:
+
+```
+dir0\						# Container on module search path
+	dir1\ 
+		__init__.py 
+		dir2\ 
+			__init__.py 
+			mod.py
+```
+
+The `__init__.py` files can contain Python code, just like normal module files. Their names are special because **their code is run automatically the first time a Python program imports a directory**, and thus serves primarily as a hook for performing initialization steps required by the package. **These files can also be completely empty**
+
+#### Package initialization file roles
+
+the `__init__.py` file serves as a hook for package initialization-time actions, declares a directory as a Python package, generates a module namespace for a directory, and implements the behavior of `from *` (i.e., `from .. import *`) statements when used with directory imports:
+
+- **Package initialization**
+
+  The first time a Python program imports through a directory, it automatically runs all the code in the directory’s `__init__.py` file. Because of that, these files are a natural place to put code to initialize the state required by files in a package.
+
+- **Module usability declarations**
+
+  In the package import model, the directory paths in your script become real nested object paths after an import. For instance, in the preceding example, after the import the expression `dir1.dir2` works and returns a module object whose namespace contains all the names assigned by `dir2`’s `__init__.py` initialization file. Such files provide a namespace for module objects created for directories, which would otherwise have no real associated module file.
+
+- **`from *` statement behavior**
+
+  As an advanced feature, you can use `__all__` lists in `__init__.py` files to define what is exported when a directory is imported with the `from *` statement form. In an `__init__.py` file, the `__all__` list is taken to be the list of submodule names that should be automatically imported when `from *` is used on the package (directory) name. If `__all__` is not set, the `from *` statement does not automatically load sub-modules nested in the directory; instead, it loads just names defined by assignments in the directory’s `__init__.py` file, including any submodules explicitly imported by code in this file. For instance, the statement `from submodule import X` in a directory’s `__init__.py` makes the name X available in that directory’s namespace.
+
+You can also simply leave these files empty, if their roles are beyond your needs (and frankly, they are often empty in practice). They must exist, though, for your directory imports to work at all.
+
+**Note :**
+
+Don’t confuse package `__init__.py` files with the class `__init__` constructor methods . The former are files of code run when imports first step through a package directory in a program run, while the latter are called when an instance is created. Both have initialization roles, but they are otherwise very different.
 
 
 
+### Package Import Example
+
+The following three files are coded in a directory dir1 and its subdirectory dir2—comments give the pathnames of these files:
+
+```
+# dir1\__init__.py 
+print('dir1 init') 
+x = 1
+
+# dir1\dir2\__init__.py 
+print('dir2 init') 
+y = 2
+
+# dir1\dir2\mod.py 
+print('in mod.py') 
+z = 3
+```
+
+`dir1` will be either an immediate subdirectory of the one we’re working in (i.e., the home directory), or an immediate subdirectory of a directory that is listed on the module search path (technically, on `sys.path`). Either way, `dir1`’s container does not need an `__init__.py` file.
+
+`import` statements run each directory’s initialization file the first time that directory is traversed, as Python descends the path; `print` statements are included here to trace their execution:
+
+```
+C:\code> python					# Run in dir1's container directory
+>>> import dir1.dir2.mod		# First imports run init files
+dir1 init
+dir2 init
+in mod.py
+>>> 
+>>> import dir1.dir2.mod		# Later imports do not
+```
+
+an already imported directory may be passed to `reload` to force reexecution of that single item. As shown here, `reload` accepts a dotted pathname to reload nested directories and files:
+
+```
+>>> from imp import reload		# from needed in 3.X only
+>>> reload(dir1) 
+dir1 init 
+<module 'dir1' from '.\\dir1\\__init__.py'>
+>>>
+>>> reload(dir1.dir2) 
+dir2 init 
+<module 'dir1.dir2' from '.\\dir1\\dir2\\__init__.py'>
+```
+
+Once imported, the path in your `import` statement becomes a nested object path in your script.
+
+```
+>>> dir1 
+<module 'dir1' from '.\\dir1\\__init__.py'>
+>>> dir1.dir2 
+<module 'dir1.dir2' from '.\\dir1\\dir2\\__init__.py'>
+>>> dir1.dir2.mod 
+<module 'dir1.dir2.mod' from '.\\dir1\\dir2\\mod.py'>
+```
+
+#### from Versus import with Packages
+
+`import` statements can be somewhat inconvenient to use with packages, because you may have to retype the paths frequently in your program.
+
+It’s often more convenient, therefore, to use the `from` statement with packages to avoid retyping the paths at each access.
+
+```
+C:\code> python
+>>> from dir1.dir2 import mod 				# Code path here only
+dir1 init 
+dir2 init 
+in mod.py
+>>> mod.z 									# Don't repeat path
+3
+>>> from dir1.dir2.mod import z
+>>> z 
+3
+>>> import dir1.dir2.mod as mod				# Use shorter name
+>>> mod.z 
+3
+>>> from dir1.dir2.mod import z as modz		# Ditto if names clash
+>>> modz 
+3
+```
 
 
 
+### Why Use Package Imports?
+
+#### A Tale of Three Systems
+
+Suppose that a programmer develops a Python program that contains a file called utilities.py for common utility code, and a top-level file named main.py that users launch to start the program. All over this program, its files say `import utilities` to load and use the common code. When the program is shipped, it arrives as a single .tar or .zip file containing all the program’s files, and when it is installed, it unpacks all its files into a single directory named system1 on the target machine:
+
+```
+system1\
+	utilities.py 		# Common utility functions, classes
+	main.py 			# Launch this to start the program
+	other.py			# Import utilities to load my tools
+```
+
+Now, suppose that a second programmer develops a different program with files also called utilities.py and main.py, and again uses import utilities throughout the program to load the common code file. When this second system is fetched and installed on the same computer as the first system, its files will unpack into a new directory called system2 somewhere on the receiving machine—ensuring that they do not overwrite same-named files from the first system:
+
+```
+system2\
+	utilities.py 		# Common utilities
+	main.py 			# Launch this to run
+	other.py			# Imports utilities
+```
+
+module search path settings are only needed to import across directory boundaries.
+
+However, suppose that after you’ve installed these two programs on your machine, you decide that you’d like to use some of the code in each of the utilities.py files in a system of your own. It’s common utility code, after all, and Python code by nature “wants” to be reused. In this case, you’d like to be able to say the following from code that you’re writing in a third directory to load one of the two files:
+
+```
+import utilities 
+utilities.func('spam')
+```
+
+Rather than installing programs in independent directories listed on the module search path individually, you can package and install them as subdirectories under a common root. For instance, you might organize all the code in this example as an install hierarchy that looks like this:
+
+```
+root\
+	system1\
+    	__init__.py 
+    	utilities.py 
+    	main.py 
+    	other.py 
+    system2\ 
+    	__init__.py 
+    	utilities.py 
+    	main.py 
+    	other.py 
+    system3\ 				# Here or elsewhere
+    	__init__.py 		# Need __init__.py here only if imported elsewhere
+    	myfile.py			# Your new code here
+```
+
+**add just the common root directory to your search path**. If your code’s imports are all relative to this common root, you can import either system’s utility file with a package import—the enclosing directory name makes the path (and hence, the module reference) unique
+
+```
+import system1.utilities 
+import system2.utilities 
+system1.utilities.function('spam') 
+system2.utilities.function('eggs')
+```
+
+The names of the enclosing directories here make the module references unique.
+
+- Note that you have to use `import` instead of `from` with packages only if you need to access the same attribute name in two or more paths. If the name of the called function here were different in each path, you could use `from` statements to avoid repeating the full package path whenever you call one of the functions
+
+
+- `__init__.py` files were added to the system1 and system2 directories to make this work, but not to the root directory. Only directories listed within `import` statements in your code require these files, they are run automatically the first time the Python process imports through a package directory.
+- in this case the system3 directory doesn’t have to be under root—just the packages of code from which you will import. However, because you never know when your own modules might be useful in other programs, you might as well place them under the common root directory as well to avoid similar name-collision problems in the future.
+- notice that both of the two original systems’ imports will keep working un-changed. Because their home directories are searched first, the addition of the common root on the search path is irrelevant to code in system1 and system2; they can keep saying just `import utilities` and expect to find their own files when run as programs —though not when used as packages in 3.X, as the next section explains. If you’re careful to unpack all your Python systems under a common root like this, path configuration also becomes simple: you’ll only need to add the common root directory once.
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+### Package Relative Imports
